fixes paragraph spacing for MCKIN-1132

--- a/static/scss/marketing.scss
+++ b/static/scss/marketing.scss
@@ -88,6 +88,11 @@
 }
 
 #programs-page {
+  p {
+    margin-bottom: 20px;
+    &:last-child { margin-bottom: 0; }
+  }
+
   ul.programs {
     margin: 0;
     list-style-type: none;
